[gd_scene format=3 uid="uid://cb0c4iqvfckww"]

[ext_resource type="Script" uid="uid://bi41vh5pth1de" path="res://inventory/character_display.gd" id="1_xu0p1"]
[ext_resource type="Texture2D" uid="uid://c4rspb3sg4ho5" path="res://assets/sprites/main_weapon_slot.png" id="2_6myf1"]
[ext_resource type="Texture2D" uid="uid://dyeeedxqbaw3w" path="res://assets/sprites/offhand_slot.png" id="3_rn0yg"]
[ext_resource type="Texture2D" uid="uid://byr3h4054jh8l" path="res://assets/sprites/top_armour_slot.png" id="4_twoi4"]
[ext_resource type="Texture2D" uid="uid://cb8gimce7bmah" path="res://assets/sprites/bottom_armour_slot.png" id="5_4l2ex"]

[node name="CharacterDisplay" type="ColorRect" unique_id=1493269503]
offset_right = 360.0
offset_bottom = 500.0
color = Color(0.7103412, 0.54834324, 0.3402945, 1)
script = ExtResource("1_xu0p1")

[node name="CharacterSprite" type="Sprite2D" parent="." unique_id=1883704886]
position = Vector2(177, 170)

[node name="MainWeaponSlot" type="Sprite2D" parent="." unique_id=446511776]
position = Vector2(444.00006, 63)
scale = Vector2(0.652, 0.505)
texture = ExtResource("2_6myf1")

[node name="OffhandWeaponSlot" type="Sprite2D" parent="." unique_id=719594276]
position = Vector2(443, 190.25)
scale = Vector2(0.64949983, 0.48999995)
texture = ExtResource("3_rn0yg")

[node name="TopAmourSlot" type="Sprite2D" parent="." unique_id=582230012]
position = Vector2(443.5, 312.99997)
scale = Vector2(0.652, 0.472)
texture = ExtResource("4_twoi4")

[node name="BottomArmourSlot" type="Sprite2D" parent="." unique_id=1974132219]
position = Vector2(443.43753, 437.18747)
scale = Vector2(0.65249985, 0.5025)
texture = ExtResource("5_4l2ex")

[node name="NameLabel" type="Label" parent="." unique_id=1707821634]
layout_mode = 0
offset_left = 45.0
offset_top = 375.0
offset_right = 320.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1
